# ai_rag_customer_personal_assistant_bot

./: .env.example  .gitignore  README.md  pyproject.toml
app/api/: main_api.py  routes.py
app/cli/: main_cli.py  mock_cli.py
app/core/: config.py  order_client.py  policy_store.py
app/services/: assistant_service.py  order_status_service.py  shipping_status_service.py
data/policies/: authorized-service-locations.md  returns-howto.md  returns-policy.md  shipping-policy.md  warranty-playbook.md
docs/: analysis.md  policy-summaries.md
