[project]
name = "rag-customer-personal-assistant-bot"
version = "0.1.0"
description = "Customer assistant bot za status porudžbina i politike povrata"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Dragan Mijatovic" }]
dependencies = [
    "fastapi==0.110.2",
    "uvicorn[standard]==0.29.0",
    "typer==0.12.3",
    "httpx==0.27.0",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "llama-index==0.10.58",
    "langchain==0.1.17",
    "openai==1.23.6",
    "boto3==1.34.95"
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.5",
    "ruff==0.3.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.5",
    "ruff==0.3.0"
]
